# ToDoListProject

./: .gitignore  CMakeLists.txt
data/: todolist.txt
src/: Task.cpp  Task.h  ToDoList.cpp  ToDoList.h  main.cpp
test/: CMakeLists.txt  TaskTest.cpp  ToDoListTest.cpp  runAllTests.cpp
